--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "grunt-autoprefixer": "~0.5.0",
     "grunt-contrib-less": "~0.8.3",
     "grunt-contrib-cssmin": "~0.7.0",
-    "assemble-swig": "~0.1.0"
+    "assemble-swig": "~0.1.0",
+    "grunt-usemin": "~3.0.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-uglify": "~0.8.0"
   }
 }
