--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-dom-munger": "^3.4.0",
     "grunt-markdown": "~0.7.0",
-    "grunt-usemin": "~3.0.0"
+    "grunt-usemin": "~3.0.0",
+    "nunjucks": "^1.3.4",
+    "grunt-nunjucks": "git://github.com/sdjcw/grunt-nunjucks-render.git"
   }
 }
