--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ custom/css/app-docs.css
 .tmp/
 
 npm-debug.log
+
+# use template
+md/leanengine_guide-cloudcode.md
+md/leanengine_guide-node.md
+md/leanengine_guide-python.md
