--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/leancloud/avoscloud-docs.git"
+    "url": "git://github.com/leancloud/docs.git"
   },
   "author": "",
   "license": "BSD",
@@ -23,6 +23,7 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-connect": "~0.5.0",
+    "grunt-connect-proxy": "0.1.10",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-less": "~0.8.3",
