--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "avoscloud-docs",
   "version": "0.0.0",
-  "description": "AVOSCloud documents.Rendered by github markdown API.",
+  "description": "LeanCloud documents",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -34,6 +34,8 @@
     "grunt-markdown": "~0.7.0",
     "grunt-usemin": "~3.0.0",
     "nunjucks": "^1.3.4",
-    "grunt-nunjucks": "git://github.com/sdjcw/grunt-nunjucks-render.git"
+    "grunt-nunjucks": "git://github.com/sdjcw/grunt-nunjucks-render.git",
+    "cheerio": "^0.19.0",
+    "avoscloud-sdk": "^0.5.4"
   }
 }
