--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "avoscloud-docs",
+  "name": "leancloud-docs",
   "version": "0.0.0",
-  "description": "LeanCloud documents",
+  "description": "LeanCloud Documentation",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
