--- a/package.json
+++ b/package.json
@@ -34,6 +34,13 @@
     "grunt-markdown": "~0.7.0",
     "grunt-usemin": "~3.0.0",
     "nunjucks": "^1.3.4",
+    "body-parser": "^1.13.1",
+    "coffee-script": "^1.9.3",
+    "cookie-parser": "^1.3.5",
+    "express": "^4.13.0",
+    "underscore": "^1.8.3",
     "grunt-nunjucks": "git://github.com/sdjcw/grunt-nunjucks-render.git"
+  },
+  "dependencies": {
   }
 }
