--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nunjucks": "^1.3.4",
     "grunt-nunjucks": "git://github.com/sdjcw/grunt-nunjucks-render.git",
     "cheerio": "^0.19.0",
-    "avoscloud-sdk": "^0.5.4"
+    "avoscloud-sdk": "^0.5.4",
+    "q": "1.4.1"
   }
 }
