fix endblock bug for realtime dotnet doc.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ md/leanengine_guide-node.md
 md/leanengine_guide-python.md
 
 .idea
+realtime_guide-android.md
+realtime_guide-dotnet.md
+realtime_guide-ios.md
+realtime_guide-js.md
