--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "coffee-script": "^1.9.3",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.0",
-    "underscore": "^1.8.3",
-    "grunt-nunjucks": "git://github.com/sdjcw/grunt-nunjucks-render.git"
+    "underscore": "^1.8.3"
   },
   "dependencies": {
 
