--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
   "devDependencies": {
     "assemble": "~0.4.33",
     "assemble-swig": "~0.1.0",
+    "avoscloud-sdk": "^0.5.4",
+    "body-parser": "^1.13.1",
+    "cheerio": "^0.19.0",
+    "coffee-script": "^1.9.3",
     "connect-livereload": "~0.3.1",
+    "cookie-parser": "^1.3.5",
+    "express": "^4.13.0",
     "grunt": "~0.4.2",
     "grunt-autoprefixer": "~0.5.0",
+    "grunt-connect-proxy": "0.1.10",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-connect": "~0.5.0",
-    "grunt-connect-proxy": "0.1.10",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-less": "~0.8.3",
@@ -32,20 +38,10 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-dom-munger": "^3.4.0",
     "grunt-markdown": "~0.7.0",
+    "grunt-nunjucks": "git://github.com/sdjcw/grunt-nunjucks-render.git",
     "grunt-usemin": "~3.0.0",
     "nunjucks": "^1.3.4",
-
-    "grunt-nunjucks": "git://github.com/sdjcw/grunt-nunjucks-render.git",
-    "cheerio": "^0.19.0",
-    "avoscloud-sdk": "^0.5.4",
-    "q": "1.4.1",
-    "body-parser": "^1.13.1",
-    "coffee-script": "^1.9.3",
-    "cookie-parser": "^1.3.5",
-    "express": "^4.13.0",
     "underscore": "^1.8.3"
   },
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
