add realtion guide tmpl

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ npm-debug.log
 md/leanengine_guide-cloudcode.md
 md/leanengine_guide-node.md
 md/leanengine_guide-python.md
+md/relation_guide-ios.md
+md/relation_guide-android.md
 
 .idea
 realtime_guide-android.md
