--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "connect-livereload": "~0.3.1",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.0",
-    "grunt": "~0.4.2",
+    "grunt": "^0.4.5",
     "grunt-autoprefixer": "~0.5.0",
     "grunt-connect-proxy": "0.1.10",
     "grunt-contrib-clean": "~0.5.0",
