--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git://github.com/leancloud/docs.git"
   },
   "author": "",
-  "license": "BSD",
+  "license": "LGPL-3.0",
   "gitHead": "c3733ba8e4b896eeb9813582f28429c095ddd66c",
   "readmeFilename": "README.md",
   "devDependencies": {
