--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "grunt-markdown": "~0.7.0",
     "grunt-nunjucks": "git://github.com/sdjcw/grunt-nunjucks-render.git",
     "grunt-usemin": "~3.0.0",
+    "jit-grunt": "^0.9.1",
     "nunjucks": "^1.3.4",
+    "time-grunt": "^1.2.1",
     "underscore": "^1.8.3"
   },
   "dependencies": {}
