添加一个全新的 ACL 快速指南文档。

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ realtime_guide-android.md
 realtime_guide-dotnet.md
 realtime_guide-ios.md
 realtime_guide-js.md
+md/acl_quick_start-android.md
+md/acl_quick_start-ios.md
