--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,16 @@ md/leanengine_guide-node.md
 md/leanengine_guide-python.md
 
 .idea
-realtime_guide-android.md
-realtime_guide-dotnet.md
-realtime_guide-ios.md
-realtime_guide-js.md
+md/realtime_guide-android.md
+md/realtime_guide-dotnet.md
+md/realtime_guide-ios.md
+md/realtime_guide-js.md
+
+md/acl_guide-android.md
+md/acl_guide-ios.md
+md/acl_guide-js.md
+md/acl_guide-python.md
+
 md/acl_quick_start-android.md
 md/acl_quick_start-ios.md
+md/acl_quick_start-js.md
