--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "grunt-usemin": "~3.1.1",
     "jit-grunt": "^0.9.1",
     "nunjucks": "^2.1.0",
+    "serve-static": "^1.10.0",
     "time-grunt": "^1.2.1",
     "underscore": "^1.8.3"
   },
