--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.13.0",
     "grunt": "^0.4.5",
+    "grunt-bump": "^0.6.0",
     "grunt-connect-proxy": "0.2.0",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "~0.5.1",
@@ -36,8 +37,10 @@
     "grunt-contrib-livereload": "~0.1.2",
     "grunt-contrib-uglify": "~0.9.2",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-conventional-changelog": "^5.0.0",
     "grunt-dom-munger": "^3.4.0",
     "grunt-markdown": "~0.7.0",
+    "grunt-npm": "0.0.2",
     "grunt-nunjucks": "git://github.com/sdjcw/grunt-nunjucks-render.git",
     "grunt-postcss": "^0.6.0",
     "grunt-usemin": "~3.1.1",
