--- a/package.json
+++ b/package.json
@@ -50,5 +50,68 @@
     "time-grunt": "^1.2.1",
     "underscore": "^1.8.3"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "contributors": [
+    "dennis zhuang <killme2008@gmail.com>",
+    "Tunghsiao Liu <t@sparanoid.com>",
+    "sunchanglong <sunchang_long@163.com>",
+    "wangxiao@gmail.com>",
+    "junwen <jwfing@gmail.com>",
+    "lzwjava <lzwjava@gmail.com>",
+    "WuJun <jun.wu@avoscloud.com>",
+    "lbt05 <lbt0506@gmail.com>",
+    "wchen <sdjcw13@gmail.com>",
+    "asaka <aisk1988@gmail.com>",
+    "jfeng <jwfing@gmail.com>",
+    "csun <csun@csundeMacBook-Pro.local>",
+    "Sun Ning <sunng@about.me>",
+    "Ning Sun <sunng@about.me>",
+    "debugger87 <yangchaozhong.2009@gmail.com>",
+    "Tianyong Tang <tang3w@gmail.com>",
+    "ufosky <ufosky@gmail.com>",
+    "wanggc <gwang@avos.com>",
+    "Jiangcheng Wu <jwu@avos.com>",
+    "Qihe Bian <ufosky@gmail.com>",
+    "sun <sunchang_long@163.com>",
+    "Ning Sun <classicning@gmail.com>",
+    "paomian <xpaomian@gmail.com>",
+    "Neal Caffrey <wujun19890209@gmail.com>",
+    "Hong Jiang <hjiang@users.noreply.github.com>",
+    "xpurer <xpure@foxmail.com>",
+    "WuJun <wujun19890209@gmail.com>",
+    "Asaka <aisk@users.noreply.github.com>",
+    "sunchanglong <sunchanglong@sunchanglongtekiMacBook-Pro.local>",
+    "xiaobo <jacob.xiaobo@gmail.com>",
+    "Build Bot <ops@leancloud.rocks>",
+    "leeyeh <lee55962698@gmail.com>",
+    "Lee Yeh <lee55962698@gmail.com>",
+    "Rui Guo <rguo@leancloud.rocks>",
+    "jwilljacob <jacob.xiaobo@gmail.com>",
+    "NemoAlex <zhhjchina@gmail.com>",
+    "sdjcw <sdjcw13@gmail.com>",
+    "Hong Jiang <hjiang@avos.com>",
+    "Wesley Lin <westlinkin@gmail.com>",
+    "Chaozhong Yang <yangchaozhong.2009@gmail.com>",
+    "windwild <gjywindwild@gmail.com>",
+    "freewing99 <wujun19890209@gmail.com>",
+    "GaoYu <hhgz9527@gmail.com>",
+    "wli <wli@leancloud.rocks>",
+    "ithcheng@gmail.com>",
+    "aprilorange.net@icloud.com>",
+    "Bohan Zhang <bohanzhang@foxmail.com>",
+    "Xiaobo Zhang <jacob.xiaobo@gmail.com>",
+    "X140Yu <zhaoxinyu1994@foxmail.com>",
+    "Zhao Xiaohong <mrluanma@gmail.com>",
+    "bigday <mybigday@qq.com>",
+    "dc <dc@letun.com>",
+    "TooBug <i@toobug.net>",
+    "SLboat <toaier@me.com>",
+    "greenkeeperio-bot <support@greenkeeper.io>",
+    "SAlex <sgl@zhihu.com>",
+    "Randy <randypriv@gmail.com>",
+    "liuyan <liuyanhp@gmail.com>",
+    "Hong Jiang <hjiang@leancloud.rocks>",
+    "_惘迷 <yangwen.yw@gmail.com>",
+    "HakurouKen <ticshot@gmail.com>"
+  ]
 }
