--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "LeanCloud Documentation",
   "main": "index.js",
   "scripts": {
-    "test": "grunt test --no-comments"
+    "test": "grunt test --no-comments",
+    "postinstall": "grunt build --no-comments",
+    "start": "static dist -p $PORT -a 0.0.0.0"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,7 @@
     "express": "^4.13.0",
     "grunt": "^0.4.5",
     "grunt-bump": "^0.6.0",
+    "grunt-cli": "^0.1.13",
     "grunt-connect-proxy": "0.2.0",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "~0.5.1",
@@ -50,7 +53,9 @@
     "time-grunt": "^1.2.1",
     "underscore": "^1.8.3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "node-static": "^0.7.7"
+  },
   "contributors": [
     "dennis zhuang <killme2008@gmail.com>",
     "Tunghsiao Liu <t@sparanoid.com>",
