--- a/package.json
+++ b/package.json
@@ -78,48 +78,53 @@
     "Tianyong Tang <tang3w@gmail.com>",
     "ufosky <ufosky@gmail.com>",
     "wanggc <gwang@avos.com>",
-    "Jiangcheng Wu <jwu@avos.com>",
     "Qihe Bian <ufosky@gmail.com>",
+    "Jiangcheng Wu <jwu@avos.com>",
     "sun <sunchang_long@163.com>",
     "Ning Sun <classicning@gmail.com>",
     "paomian <xpaomian@gmail.com>",
     "Neal Caffrey <wujun19890209@gmail.com>",
     "Hong Jiang <hjiang@users.noreply.github.com>",
+    "leeyeh <lee55962698@gmail.com>",
     "xpurer <xpure@foxmail.com>",
+    "Build Bot <ops@leancloud.rocks>",
     "WuJun <wujun19890209@gmail.com>",
-    "Asaka <aisk@users.noreply.github.com>",
+    "Juvenn Woo <machese@gmail.com>",
     "sunchanglong <sunchanglong@sunchanglongtekiMacBook-Pro.local>",
     "xiaobo <jacob.xiaobo@gmail.com>",
-    "Build Bot <ops@leancloud.rocks>",
-    "leeyeh <lee55962698@gmail.com>",
-    "Lee Yeh <lee55962698@gmail.com>",
+    "Asaka <aisk@users.noreply.github.com>",
     "Rui Guo <rguo@leancloud.rocks>",
-    "jwilljacob <jacob.xiaobo@gmail.com>",
-    "NemoAlex <zhhjchina@gmail.com>",
-    "sdjcw <sdjcw13@gmail.com>",
-    "Hong Jiang <hjiang@avos.com>",
-    "Wesley Lin <westlinkin@gmail.com>",
-    "Chaozhong Yang <yangchaozhong.2009@gmail.com>",
-    "windwild <gjywindwild@gmail.com>",
-    "freewing99 <wujun19890209@gmail.com>",
-    "GaoYu <hhgz9527@gmail.com>",
-    "wli <wli@leancloud.rocks>",
-    "ithcheng@gmail.com>",
-    "aprilorange.net@icloud.com>",
-    "Bohan Zhang <bohanzhang@foxmail.com>",
-    "Xiaobo Zhang <jacob.xiaobo@gmail.com>",
-    "X140Yu <zhaoxinyu1994@foxmail.com>",
-    "Zhao Xiaohong <mrluanma@gmail.com>",
-    "bigday <mybigday@qq.com>",
-    "dc <dc@letun.com>",
-    "TooBug <i@toobug.net>",
-    "SLboat <toaier@me.com>",
     "greenkeeperio-bot <support@greenkeeper.io>",
-    "SAlex <sgl@zhihu.com>",
-    "Randy <randypriv@gmail.com>",
+    "Lee Yeh <lee55962698@gmail.com>",
+    "jwilljacob <jacob.xiaobo@gmail.com>",
+    "jysperm <jysperm@gmail.com>",
+    "daweibayu <daweibayu@gmail.com>",
+    "freewing99 <wujun19890209@gmail.com>",
+    "Wesley Lin <westlinkin@gmail.com>",
+    "sdjcw <sdjcw13@gmail.com>",
+    "NemoAlex <zhhjchina@gmail.com>",
+    "Hong Jiang <hjiang@avos.com>",
+    "windwild <gjywindwild@gmail.com>",
+    "Chaozhong Yang <yangchaozhong.2009@gmail.com>",
+    "Bohan Zhang <bohanzhang@foxmail.com>",
     "liuyan <liuyanhp@gmail.com>",
+    "SLboat <toaier@me.com>",
+    "SAlex <sgl@zhihu.com>",
+    "aprilorange.net@icloud.com>",
+    "Randy <randypriv@gmail.com>",
+    "At15 <at15@outlook.com>",
     "Hong Jiang <hjiang@leancloud.rocks>",
     "_惘迷 <yangwen.yw@gmail.com>",
-    "HakurouKen <ticshot@gmail.com>"
+    "HakurouKen <ticshot@gmail.com>",
+    "GaoYu <hhgz9527@gmail.com>",
+    "dc <dc@letun.com>",
+    "wli <wli@leancloud.rocks>",
+    "bigday <mybigday@qq.com>",
+    "Zhao Xiaohong <mrluanma@gmail.com>",
+    "Xiaobo Zhang <jacob.xiaobo@gmail.com>",
+    "X140Yu <zhaoxinyu1994@foxmail.com>",
+    "jysperm@gmail.com>",
+    "ithcheng@gmail.com>",
+    "TooBug <i@toobug.net>"
   ]
 }
