LeanEngine: HttpsRedirect 中间件增加 trust proxy 设置
否则会出现重定向循环

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "grunt-dom-munger": "^3.4.0",
     "grunt-markdown": "~0.7.0",
     "grunt-npm": "0.0.2",
-    "grunt-nunjucks": "git://github.com/sdjcw/grunt-nunjucks-render.git",
+    "grunt-nunjucks": "sdjcw/grunt-nunjucks-render",
     "grunt-postcss": "^0.7.0",
     "grunt-usemin": "~3.1.1",
     "jit-grunt": "^0.9.1",
