--- a/package.json
+++ b/package.json
@@ -22,38 +22,38 @@
   "devDependencies": {
     "assemble": "~0.4.33",
     "assemble-swig": "~0.1.0",
-    "autoprefixer": "^6.0.1",
+    "autoprefixer": "^6.1.1",
     "avoscloud-sdk": "^1.0.0-rc3",
-    "body-parser": "^1.13.1",
+    "body-parser": "^1.14.1",
     "cheerio": "^0.19.0",
-    "coffee-script": "^1.9.3",
-    "connect-livereload": "~0.5.3",
-    "cookie-parser": "^1.3.5",
+    "coffee-script": "^1.10.0",
+    "connect-livereload": "^0.5.4",
+    "cookie-parser": "^1.4.0",
     "express": "^4.13.0",
     "grunt": "^0.4.5",
     "grunt-bump": "^0.6.0",
     "grunt-cli": "^0.1.13",
     "grunt-connect-proxy": "0.2.0",
-    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-connect": "~0.11.2",
-    "grunt-contrib-copy": "~0.8.1",
+    "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-cssmin": "~0.14.0",
-    "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-less": "^1.1.0",
     "grunt-contrib-livereload": "~0.1.2",
-    "grunt-contrib-uglify": "~0.10.0",
+    "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-conventional-changelog": "^5.0.0",
     "grunt-dom-munger": "^3.4.0",
     "grunt-markdown": "~0.7.0",
     "grunt-npm": "0.0.2",
-    "grunt-nunjucks": "sdjcw/grunt-nunjucks-render",
+    "grunt-nunjucks": "github:sdjcw/grunt-nunjucks-render",
     "grunt-postcss": "^0.7.0",
     "grunt-usemin": "~3.1.1",
     "jit-grunt": "^0.9.1",
-    "nunjucks": "^2.1.0",
+    "nunjucks": "^2.2.0",
     "serve-static": "^1.10.0",
-    "time-grunt": "^1.2.1",
+    "time-grunt": "^1.2.2",
     "underscore": "^1.8.3"
   },
   "dependencies": {
