--- a/package.json
+++ b/package.json
@@ -64,67 +64,70 @@
     "Tunghsiao Liu <t@sparanoid.com>",
     "sunchanglong <sunchang_long@163.com>",
     "wangxiao@gmail.com>",
+    "WuJun <jun.wu@avoscloud.com>",
     "junwen <jwfing@gmail.com>",
     "lzwjava <lzwjava@gmail.com>",
-    "WuJun <jun.wu@avoscloud.com>",
     "lbt05 <lbt0506@gmail.com>",
     "wchen <sdjcw13@gmail.com>",
     "asaka <aisk1988@gmail.com>",
     "jfeng <jwfing@gmail.com>",
     "csun <csun@csundeMacBook-Pro.local>",
-    "Sun Ning <sunng@about.me>",
     "Ning Sun <sunng@about.me>",
+    "Sun Ning <sunng@about.me>",
     "debugger87 <yangchaozhong.2009@gmail.com>",
     "Tianyong Tang <tang3w@gmail.com>",
     "ufosky <ufosky@gmail.com>",
-    "wanggc <gwang@avos.com>",
-    "Qihe Bian <ufosky@gmail.com>",
     "Jiangcheng Wu <jwu@avos.com>",
+    "wanggc <gwang@avos.com>",
     "sun <sunchang_long@163.com>",
-    "Ning Sun <classicning@gmail.com>",
-    "paomian <xpaomian@gmail.com>",
-    "Neal Caffrey <wujun19890209@gmail.com>",
-    "Hong Jiang <hjiang@users.noreply.github.com>",
+    "Qihe Bian <ufosky@gmail.com>",
     "leeyeh <lee55962698@gmail.com>",
-    "xpurer <xpure@foxmail.com>",
+    "Ning Sun <classicning@gmail.com>",
     "Build Bot <ops@leancloud.rocks>",
+    "dovaove@163.com>",
+    "paomian <xpaomian@gmail.com>",
+    "Hong Jiang <hjiang@users.noreply.github.com>",
+    "Neal Caffrey <wujun19890209@gmail.com>",
+    "xpurer <xpure@foxmail.com>",
     "WuJun <wujun19890209@gmail.com>",
     "Juvenn Woo <machese@gmail.com>",
-    "sunchanglong <sunchanglong@sunchanglongtekiMacBook-Pro.local>",
     "xiaobo <jacob.xiaobo@gmail.com>",
+    "sunchanglong <sunchanglong@sunchanglongtekiMacBook-Pro.local>",
     "Asaka <aisk@users.noreply.github.com>",
     "Rui Guo <rguo@leancloud.rocks>",
     "greenkeeperio-bot <support@greenkeeper.io>",
-    "Lee Yeh <lee55962698@gmail.com>",
-    "jwilljacob <jacob.xiaobo@gmail.com>",
     "jysperm <jysperm@gmail.com>",
-    "daweibayu <daweibayu@gmail.com>",
+    "jwilljacob <jacob.xiaobo@gmail.com>",
+    "DrustZ <zhangmr13@mails.tsinghua.edu.cn>",
+    "Lee Yeh <lee55962698@gmail.com>",
     "freewing99 <wujun19890209@gmail.com>",
-    "Wesley Lin <westlinkin@gmail.com>",
-    "sdjcw <sdjcw13@gmail.com>",
-    "NemoAlex <zhhjchina@gmail.com>",
-    "Hong Jiang <hjiang@avos.com>",
     "windwild <gjywindwild@gmail.com>",
+    "NemoAlex <zhhjchina@gmail.com>",
+    "daweibayu <daweibayu@gmail.com>",
+    "sdjcw <sdjcw13@gmail.com>",
+    "Wesley Lin <westlinkin@gmail.com>",
+    "Hong Jiang <hjiang@avos.com>",
     "Chaozhong Yang <yangchaozhong.2009@gmail.com>",
-    "Bohan Zhang <bohanzhang@foxmail.com>",
-    "liuyan <liuyanhp@gmail.com>",
-    "SLboat <toaier@me.com>",
-    "SAlex <sgl@zhihu.com>",
+    "n Lóng <aisk1988@gmail.com>",
     "aprilorange.net@icloud.com>",
-    "Randy <randypriv@gmail.com>",
-    "At15 <at15@outlook.com>",
-    "Hong Jiang <hjiang@leancloud.rocks>",
+    "Bohan Zhang <bohanzhang@foxmail.com>",
     "_惘迷 <yangwen.yw@gmail.com>",
-    "HakurouKen <ticshot@gmail.com>",
-    "GaoYu <hhgz9527@gmail.com>",
-    "dc <dc@letun.com>",
-    "wli <wli@leancloud.rocks>",
-    "bigday <mybigday@qq.com>",
+    "At15 <at15@outlook.com>",
     "Zhao Xiaohong <mrluanma@gmail.com>",
+    "bigday <mybigday@qq.com>",
     "Xiaobo Zhang <jacob.xiaobo@gmail.com>",
     "X140Yu <zhaoxinyu1994@foxmail.com>",
+    "dc <dc@letun.com>",
+    "TooBug <i@toobug.net>",
+    "SLboat <toaier@me.com>",
+    "SAlex <sgl@zhihu.com>",
+    "Randy <randypriv@gmail.com>",
+    "liuyan <liuyanhp@gmail.com>",
+    "Hong Jiang <hjiang@leancloud.rocks>",
     "jysperm@gmail.com>",
-    "ithcheng@gmail.com>",
-    "TooBug <i@toobug.net>"
+    "HakurouKen <ticshot@gmail.com>",
+    "GaoYu <hhgz9527@gmail.com>",
+    "wli <wli@leancloud.rocks>",
+    "ithcheng@gmail.com>"
   ]
 }
