chore: update contributors

--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "Tunghsiao Liu <t@sparanoid.com>",
     "sunchanglong <sunchang_long@163.com>",
     "wangxiao@gmail.com>",
-    "WuJun <jun.wu@avoscloud.com>",
     "junwen <jwfing@gmail.com>",
+    "WuJun <jun.wu@avoscloud.com>",
     "lzwjava <lzwjava@gmail.com>",
     "lbt05 <lbt0506@gmail.com>",
     "wchen <sdjcw13@gmail.com>",
@@ -76,58 +76,62 @@
     "Sun Ning <sunng@about.me>",
     "debugger87 <yangchaozhong.2009@gmail.com>",
     "Tianyong Tang <tang3w@gmail.com>",
-    "ufosky <ufosky@gmail.com>",
     "Jiangcheng Wu <jwu@avos.com>",
     "wanggc <gwang@avos.com>",
-    "sun <sunchang_long@163.com>",
+    "ufosky <ufosky@gmail.com>",
     "Qihe Bian <ufosky@gmail.com>",
+    "sun <sunchang_long@163.com>",
     "leeyeh <lee55962698@gmail.com>",
-    "Ning Sun <classicning@gmail.com>",
     "Build Bot <ops@leancloud.rocks>",
+    "Ning Sun <classicning@gmail.com>",
     "dovaove@163.com>",
     "paomian <xpaomian@gmail.com>",
     "Hong Jiang <hjiang@users.noreply.github.com>",
+    "WuJun <wujun19890209@gmail.com>",
     "Neal Caffrey <wujun19890209@gmail.com>",
     "xpurer <xpure@foxmail.com>",
-    "WuJun <wujun19890209@gmail.com>",
     "Juvenn Woo <machese@gmail.com>",
-    "xiaobo <jacob.xiaobo@gmail.com>",
-    "sunchanglong <sunchanglong@sunchanglongtekiMacBook-Pro.local>",
-    "Asaka <aisk@users.noreply.github.com>",
     "Rui Guo <rguo@leancloud.rocks>",
+    "Asaka <aisk@users.noreply.github.com>",
+    "sunchanglong <sunchanglong@sunchanglongtekiMacBook-Pro.local>",
+    "xiaobo <jacob.xiaobo@gmail.com>",
     "greenkeeperio-bot <support@greenkeeper.io>",
-    "jysperm <jysperm@gmail.com>",
-    "jwilljacob <jacob.xiaobo@gmail.com>",
-    "DrustZ <zhangmr13@mails.tsinghua.edu.cn>",
     "Lee Yeh <lee55962698@gmail.com>",
-    "freewing99 <wujun19890209@gmail.com>",
-    "windwild <gjywindwild@gmail.com>",
-    "NemoAlex <zhhjchina@gmail.com>",
-    "daweibayu <daweibayu@gmail.com>",
+    "jysperm <jysperm@gmail.com>",
+    "chenyilong <luohanchenyilong@163.com>",
+    "DrustZ <zhangmr13@mails.tsinghua.edu.cn>",
+    "jwilljacob <jacob.xiaobo@gmail.com>",
     "sdjcw <sdjcw13@gmail.com>",
-    "Wesley Lin <westlinkin@gmail.com>",
     "Hong Jiang <hjiang@avos.com>",
+    "NemoAlex <zhhjchina@gmail.com>",
     "Chaozhong Yang <yangchaozhong.2009@gmail.com>",
+    "windwild <gjywindwild@gmail.com>",
+    "Wesley Lin <westlinkin@gmail.com>",
+    "daweibayu <daweibayu@gmail.com>",
+    "freewing99 <wujun19890209@gmail.com>",
+    "wli <wli@leancloud.rocks>",
+    "ithcheng@gmail.com>",
+    "Ce Gao <gaocegege@hotmail.com>",
     "n Lóng <aisk1988@gmail.com>",
     "aprilorange.net@icloud.com>",
     "Bohan Zhang <bohanzhang@foxmail.com>",
     "_惘迷 <yangwen.yw@gmail.com>",
     "At15 <at15@outlook.com>",
-    "Zhao Xiaohong <mrluanma@gmail.com>",
-    "bigday <mybigday@qq.com>",
-    "Xiaobo Zhang <jacob.xiaobo@gmail.com>",
     "X140Yu <zhaoxinyu1994@foxmail.com>",
-    "dc <dc@letun.com>",
+    "Zhao Xiaohong <mrluanma@gmail.com>",
+    "Xiaobo Zhang <jacob.xiaobo@gmail.com>",
+    "bigday <mybigday@qq.com>",
     "TooBug <i@toobug.net>",
+    "dc <dc@letun.com>",
     "SLboat <toaier@me.com>",
     "SAlex <sgl@zhihu.com>",
     "Randy <randypriv@gmail.com>",
+    "Making GitHub Delicious <iron@waffle.io>",
     "liuyan <liuyanhp@gmail.com>",
+    "JunfeiW <ahjfwang@gmail.com>",
     "Hong Jiang <hjiang@leancloud.rocks>",
-    "jysperm@gmail.com>",
     "HakurouKen <ticshot@gmail.com>",
-    "GaoYu <hhgz9527@gmail.com>",
-    "wli <wli@leancloud.rocks>",
-    "ithcheng@gmail.com>"
+    "jysperm@gmail.com>",
+    "GaoYu <hhgz9527@gmail.com>"
   ]
 }
