--- a/.gitignore
+++ b/.gitignore
@@ -15,29 +15,17 @@ npm-debug.log
 # ------------
 # use template
 # ------------
-md/acl_guide-android.md
-md/acl_guide-ios.md
-md/acl_guide-js.md
-md/acl_guide-python.md
-md/acl_quick_start-android.md
-md/acl_quick_start-ios.md
-md/acl_quick_start-js.md
-md/leanengine_guide-cloudcode.md
-md/leanengine_guide-node.md
-md/leanengine_guide-python.md
-md/realtime_guide-android.md
-md/realtime_guide-dotnet.md
-md/realtime_guide-ios.md
-md/realtime_guide-js.md
-md/sdk_setup-android.md
-md/sdk_setup-ios.md
-md/sdk_setup-js.md
-md/sms_guide-android.md
-md/sms_guide-ios.md
-md/sms_guide-js.md
+md/acl_guide*.md
+md/acl_quick_start*.md
+md/leanengine_guide*.md
+md/leanengine_cloudfunction*.md
+md/leanengine_webhosting*.md
 md/leanstorage_guide*.md
-
+md/realtime_guide*.md
+md/relation_guide*.md
+md/sdk_setup*.md
+md/sms_guide*.md
 md/test.md
+
 views/test.md
-md/leanengine_cloudfunction_guide-node.md
-md/leanengine_webhosting_guide-node.md
+
