--- a/package.json
+++ b/package.json
@@ -62,76 +62,80 @@
   "contributors": [
     "dennis zhuang <killme2008@gmail.com>",
     "Tunghsiao Liu <t@sparanoid.com>",
-    "sunchanglong <sunchang_long@163.com>",
+    "WuJun <jun.wu@avoscloud.com>",
     "wangxiao@gmail.com>",
     "junwen <jwfing@gmail.com>",
-    "WuJun <jun.wu@avoscloud.com>",
+    "sunchanglong <sunchang_long@163.com>",
     "lzwjava <lzwjava@gmail.com>",
     "lbt05 <lbt0506@gmail.com>",
     "wchen <sdjcw13@gmail.com>",
     "asaka <aisk1988@gmail.com>",
+    "Ning Sun <sunng@about.me>",
     "jfeng <jwfing@gmail.com>",
     "csun <csun@csundeMacBook-Pro.local>",
-    "Ning Sun <sunng@about.me>",
+    "Tianyong Tang <tang3w@gmail.com>",
     "Sun Ning <sunng@about.me>",
     "debugger87 <yangchaozhong.2009@gmail.com>",
-    "Tianyong Tang <tang3w@gmail.com>",
+    "Rui Guo <rguo@leancloud.rocks>",
     "Jiangcheng Wu <jwu@avos.com>",
     "wanggc <gwang@avos.com>",
     "ufosky <ufosky@gmail.com>",
-    "Qihe Bian <ufosky@gmail.com>",
-    "sun <sunchang_long@163.com>",
     "leeyeh <lee55962698@gmail.com>",
+    "sun <sunchang_long@163.com>",
+    "Qihe Bian <ufosky@gmail.com>",
+    "greenkeeperio-bot <support@greenkeeper.io>",
     "Build Bot <ops@leancloud.rocks>",
     "Ning Sun <classicning@gmail.com>",
-    "dovaove@163.com>",
-    "paomian <xpaomian@gmail.com>",
-    "Hong Jiang <hjiang@users.noreply.github.com>",
     "WuJun <wujun19890209@gmail.com>",
+    "dovaove@163.com>",
+    "Hong Jiang <hjiang@users.noreply.github.com>",
+    "paomian <xpaomian@gmail.com>",
+    "daweibayu <daweibayu@gmail.com>",
     "Neal Caffrey <wujun19890209@gmail.com>",
     "xpurer <xpure@foxmail.com>",
     "Juvenn Woo <machese@gmail.com>",
-    "Rui Guo <rguo@leancloud.rocks>",
-    "Asaka <aisk@users.noreply.github.com>",
+    "Lee Yeh <lee55962698@gmail.com>",
     "sunchanglong <sunchanglong@sunchanglongtekiMacBook-Pro.local>",
     "xiaobo <jacob.xiaobo@gmail.com>",
-    "greenkeeperio-bot <support@greenkeeper.io>",
-    "Lee Yeh <lee55962698@gmail.com>",
-    "jysperm <jysperm@gmail.com>",
+    "Asaka <aisk@users.noreply.github.com>",
     "chenyilong <luohanchenyilong@163.com>",
-    "DrustZ <zhangmr13@mails.tsinghua.edu.cn>",
+    "jysperm <jysperm@gmail.com>",
     "jwilljacob <jacob.xiaobo@gmail.com>",
-    "sdjcw <sdjcw13@gmail.com>",
+    "Cui Yiran <cuiyiran@cuiyirandeMacBook-Pro.local>",
+    "DrustZ <zhangmr13@mails.tsinghua.edu.cn>",
+    "freewing99 <wujun19890209@gmail.com>",
+    "Chaozhong Yang <yangchaozhong.2009@gmail.com>",
     "Hong Jiang <hjiang@avos.com>",
     "NemoAlex <zhhjchina@gmail.com>",
-    "Chaozhong Yang <yangchaozhong.2009@gmail.com>",
-    "windwild <gjywindwild@gmail.com>",
+    "Panmax <967168@qq.com>",
     "Wesley Lin <westlinkin@gmail.com>",
-    "daweibayu <daweibayu@gmail.com>",
-    "freewing99 <wujun19890209@gmail.com>",
-    "wli <wli@leancloud.rocks>",
+    "sdjcw <sdjcw13@gmail.com>",
+    "windwild <gjywindwild@gmail.com>",
+    "bigday <mybigday@qq.com>",
+    "Xiaobo Zhang <jacob.xiaobo@gmail.com>",
+    "X140Yu <zhaoxinyu1994@foxmail.com>",
+    "TooBug <i@toobug.net>",
+    "liuyan <liuyanhp@gmail.com>",
+    "SLboat <toaier@me.com>",
+    "mayo <chaosmaple@gmail.com>",
+    "SAlex <sgl@zhihu.com>",
+    "jysperm@gmail.com>",
+    "Randy <randypriv@gmail.com>",
+    "Making GitHub Delicious <iron@waffle.io>",
+    "JunfeiW <ahjfwang@gmail.com>",
+    "Jerry Zhang <realzzz@gmail.com>",
+    "Hong Jiang <hjiang@leancloud.rocks>",
+    "HakurouKen <ticshot@gmail.com>",
     "ithcheng@gmail.com>",
+    "wli <wli@leancloud.rocks>",
+    "GaoYu <hhgz9527@gmail.com>",
     "Ce Gao <gaocegege@hotmail.com>",
     "n Lóng <aisk1988@gmail.com>",
     "aprilorange.net@icloud.com>",
     "Bohan Zhang <bohanzhang@foxmail.com>",
     "_惘迷 <yangwen.yw@gmail.com>",
     "At15 <at15@outlook.com>",
-    "X140Yu <zhaoxinyu1994@foxmail.com>",
-    "Zhao Xiaohong <mrluanma@gmail.com>",
-    "Xiaobo Zhang <jacob.xiaobo@gmail.com>",
-    "bigday <mybigday@qq.com>",
-    "TooBug <i@toobug.net>",
     "dc <dc@letun.com>",
-    "SLboat <toaier@me.com>",
-    "SAlex <sgl@zhihu.com>",
-    "Randy <randypriv@gmail.com>",
-    "Making GitHub Delicious <iron@waffle.io>",
-    "liuyan <liuyanhp@gmail.com>",
-    "JunfeiW <ahjfwang@gmail.com>",
-    "Hong Jiang <hjiang@leancloud.rocks>",
-    "HakurouKen <ticshot@gmail.com>",
-    "jysperm@gmail.com>",
-    "GaoYu <hhgz9527@gmail.com>"
+    "Zhao Xiaohong <mrluanma@gmail.com>"
   ]
 }
