--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jit-grunt": "^0.10.0",
     "nunjucks": "^2.4.1",
     "serve-static": "^1.10.0",
+    "should": "^9.0.2",
     "time-grunt": "^1.2.2",
     "underscore": "^1.8.3"
   },
