--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "grunt-dom-munger": "^3.4.0",
     "grunt-markdown": "~0.7.0",
     "grunt-npm": "0.0.2",
-    "grunt-nunjucks": "sdjcw/grunt-nunjucks-render",
+    "grunt-nunjucks": "sdjcw/grunt-nunjucks-render#7b7a39df7218738deb126a6f128c3acceae1afb1",
     "grunt-postcss": "^0.8.0",
     "grunt-usemin": "~3.1.1",
     "jit-grunt": "^0.10.0",
