chore: update contributors

--- a/package.json
+++ b/package.json
@@ -64,94 +64,98 @@
     "dennis zhuang <killme2008@gmail.com>",
     "Tunghsiao Liu <t@sparanoid.com>",
     "WuJun <jun.wu@avoscloud.com>",
-    "wangxiao@gmail.com>",
     "junwen <jwfing@gmail.com>",
+    "wangxiao@gmail.com>",
     "lbt05 <lbt0506@gmail.com>",
     "sunchanglong <sunchang_long@163.com>",
     "lzwjava <lzwjava@gmail.com>",
     "wchen <sdjcw13@gmail.com>",
     "jfeng <jwfing@gmail.com>",
-    "Ning Sun <sunng@about.me>",
     "csun <csun@csundeMacBook-Pro.local>",
+    "Ning Sun <sunng@about.me>",
     "asaka <aisk1988@gmail.com>",
+    "WuJun <wujun19890209@gmail.com>",
     "Tianyong Tang <tang3w@gmail.com>",
     "Sun Ning <sunng@about.me>",
-    "WuJun <wujun19890209@gmail.com>",
     "wujun4code <wujun19890209@gmail.com>",
     "Rui Guo <rguo@leancloud.rocks>",
     "debugger87 <yangchaozhong.2009@gmail.com>",
+    "Lee Yeh <lee55962698@gmail.com>",
+    "daweibayu <daweibayu@gmail.com>",
     "Juvenn Woo <machese@gmail.com>",
+    "leeyeh <lee55962698@gmail.com>",
     "dovaove@163.com>",
     "Jiangcheng Wu <jwu@avos.com>",
-    "daweibayu <daweibayu@gmail.com>",
-    "leeyeh <lee55962698@gmail.com>",
     "sun <sunchang_long@163.com>",
-    "wanggc <gwang@avos.com>",
     "ufosky <ufosky@gmail.com>",
-    "Lee Yeh <lee55962698@gmail.com>",
     "jysperm <jysperm@gmail.com>",
-    "dittoyi <ruyi.ren@yahoo.com>",
-    "Qihe Bian <ufosky@gmail.com>",
-    "greenkeeperio-bot <support@greenkeeper.io>",
-    "Ning Sun <classicning@gmail.com>",
+    "wanggc <gwang@avos.com>",
     "David Duan <davidduan0916@gmail.com>",
+    "Ning Sun <classicning@gmail.com>",
+    "Qihe Bian <ufosky@gmail.com>",
+    "dittoyi <ruyi.ren@yahoo.com>",
+    "greenkeeperio-bot <support@greenkeeper.io>",
+    "Rui Guo <alven.gr@gmail.com>",
     "Build Bot <ops@leancloud.rocks>",
     "chenyilong <luohanchenyilong@163.com>",
     "Hong Jiang <hjiang@users.noreply.github.com>",
+    "iOS程序犭袁 <ChenYilong@users.noreply.github.com>",
     "paomian <xpaomian@gmail.com>",
+    "Long Ang <aisk@users.noreply.github.com>",
     "Neal Caffrey <wujun19890209@gmail.com>",
     "xpurer <xpure@foxmail.com>",
-    "Cui Yiran <cuiyiran@cuiyirandeMacBook-Pro.local>",
-    "xiaobo <jacob.xiaobo@gmail.com>",
-    "Asaka <aisk@users.noreply.github.com>",
-    "Rui Guo <alven.gr@gmail.com>",
-    "sunchanglong <sunchanglong@sunchanglongtekiMacBook-Pro.local>",
     "jysperm@gmail.com>",
+    "Cui Yiran <cuiyiran@cuiyirandeMacBook-Pro.local>",
+    "Asaka <aisk@users.noreply.github.com>",
+    "xiaobo <jacob.xiaobo@gmail.com>",
+    "sunchanglong <sunchanglong@sunchanglongtekiMacBook-Pro.local>",
+    "Yelmor <yelmor@outlook.com>",
     "DrustZ <zhangmr13@mails.tsinghua.edu.cn>",
     "Greenkeeper <support@greenkeeper.io>",
     "jwilljacob <jacob.xiaobo@gmail.com>",
-    "Panmax <967168@qq.com>",
-    "Chaozhong Yang <yangchaozhong.2009@gmail.com>",
-    "NemoAlex <zhhjchina@gmail.com>",
-    "Hong Jiang <hjiang@avos.com>",
-    "windwild <gjywindwild@gmail.com>",
-    "freewing99 <wujun19890209@gmail.com>",
-    "sdjcw <sdjcw13@gmail.com>",
-    "Wesley Lin <westlinkin@gmail.com>",
     "Jiangcheng Wu <kadashu@users.noreply.github.com>",
-    "ithcheng@gmail.com>",
-    "At15 <at15@outlook.com>",
-    "Bohan Zhang <bohanzhang@foxmail.com>",
-    "Ce Gao <gaocegege@hotmail.com>",
-    "Cui Yiran <cuiyiran3@gmail.com>",
-    "GaoYu <hhgz9527@gmail.com>",
-    "HakurouKen <ticshot@gmail.com>",
+    "Wesley Lin <westlinkin@gmail.com>",
+    "Chaozhong Yang <yangchaozhong.2009@gmail.com>",
+    "windwild <gjywindwild@gmail.com>",
+    "Panmax <967168@qq.com>",
+    "sdjcw <sdjcw13@gmail.com>",
+    "freewing99 <wujun19890209@gmail.com>",
+    "Hong Jiang <hjiang@avos.com>",
+    "NemoAlex <zhhjchina@gmail.com>",
     "Hong Jiang <hjiang@leancloud.rocks>",
-    "Jerry Zhang <realzzz@gmail.com>",
-    "JunfeiW <ahjfwang@gmail.com>",
-    "Kevin Wang <14307130048@fudan.edu.cn>",
-    "Long Ang <aisk@users.noreply.github.com>",
-    "Making GitHub Delicious <iron@waffle.io>",
-    "Proton <feisuzhu@163.com>",
-    "Randy <randypriv@gmail.com>",
-    "Ruyi.Ren <dittoyiren@gmail.com>",
-    "SAlex <sgl@zhihu.com>",
-    "SLboat <toaier@me.com>",
+    "Cui Yiran <cuiyiran3@gmail.com>",
     "TooBug <i@toobug.net>",
-    "Wenchao Hu <zjuhwc@gmail.com>",
-    "X140Yu <zhaoxinyu1994@foxmail.com>",
-    "Xiaobo Zhang <jacob.xiaobo@gmail.com>",
+    "liuyan <liuyanhp@gmail.com>",
+    "mayo <chaosmaple@gmail.com>",
+    "Jerry Zhang <realzzz@gmail.com>",
+    "SLboat <toaier@me.com>",
+    "Ce Gao <gaocegege@hotmail.com>",
+    "SAlex <sgl@zhihu.com>",
+    "Ruyi.Ren <dittoyiren@gmail.com>",
+    "Randy <randypriv@gmail.com>",
+    "Proton <feisuzhu@163.com>",
+    "wli <wli@leancloud.rocks>",
+    "Bohan Zhang <bohanzhang@foxmail.com>",
+    "n Lóng <aisk1988@gmail.com>",
+    "aprilorange.net@icloud.com>",
+    "At15 <at15@outlook.com>",
+    "_惘迷 <yangwen.yw@gmail.com>",
+    "zhaihuailou@icloud.com>",
+    "Making GitHub Delicious <iron@waffle.io>",
+    "ithcheng@gmail.com>",
+    "JunfeiW <ahjfwang@gmail.com>",
+    "Kainy Guo <gt@kainy.cn>",
+    "Kevin Wang <14307130048@fudan.edu.cn>",
     "Zhao Xiaohong <mrluanma@gmail.com>",
     "ZhiHao Qian <lacusrinz@gmail.com>",
     "Zigii Wong <wongzigii@outlook.com>",
     "bigday <mybigday@qq.com>",
+    "Xiaobo Zhang <jacob.xiaobo@gmail.com>",
+    "GaoYu <hhgz9527@gmail.com>",
+    "ambar.lee@gmail.com>",
     "dc <dc@letun.com>",
-    "liuyan <liuyanhp@gmail.com>",
-    "mayo <chaosmaple@gmail.com>",
-    "wli <wli@leancloud.rocks>",
-    "n Lóng <aisk1988@gmail.com>",
-    "aprilorange.net@icloud.com>",
-    "iOS程序犭袁 <ChenYilong@users.noreply.github.com>",
-    "_惘迷 <yangwen.yw@gmail.com>"
+    "X140Yu <zhaoxinyu1994@foxmail.com>",
+    "HakurouKen <ticshot@gmail.com>",
+    "Wenchao Hu <zjuhwc@gmail.com>"
   ]
 }
