--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "grunt-postcss": "^0.8.0",
     "grunt-usemin": "~3.1.1",
     "jit-grunt": "^0.10.0",
+    "moment": "^2.10.6",
     "nunjucks": "^2.4.1",
     "serve-static": "^1.10.0",
     "should": "^9.0.2",
