--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "assemble": "~0.4.33",
     "assemble-swig": "~0.1.0",
     "autoprefixer": "^6.3.4",
-    "avoscloud-sdk": "^1.0.0-rc3",
     "axios": "^0.15.3",
+    "bluebird": "^3.4.7",
     "body-parser": "^1.14.1",
     "cheerio": "^0.20.0",
     "coffee-script": "^1.10.0",
@@ -52,6 +52,7 @@
     "grunt-postcss": "^0.8.0",
     "grunt-usemin": "~3.1.1",
     "jit-grunt": "^0.10.0",
+    "leancloud-storage": "^2.1.2",
     "moment": "^2.10.6",
     "nunjucks": "^2.4.1",
     "serve-static": "^1.10.0",
